fixed displayin checbox error on small mobile devices

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -94,5 +94,5 @@
   color: $red-400;
   font-size: 0.8rem;
   position: absolute;
-  top: 3rem;
+  top: 3.8rem;
 }
